--- a/recipe.html
+++ b/recipe.html
@@ -31,6 +31,21 @@
     <section>
       <article>
         <h2>Ingredients: All the ingredients you know.</h2>
+        <img
+          src="Assets/Images/element5-digital-CpBBsda2eRI-unsplash.jpg"
+          alt="a picture of oranges, pineapples, strawberries, banana"
+          width="100"
+          height="100"
+        />
+        <p>
+          This recipe is mine, but you can -
+          <a
+            href="https://www.eatingwell.com/gallery/8043805/smoothies-to-make-forever/"
+            target="_blank"
+            >Click here</a
+          >
+          to see more smoothie recipes
+        </p>
         <ul>
           <li>Unsweetened Greek Yoghurt</li>
           <li>Frozen Banana</li>
@@ -88,9 +103,44 @@
         Also remember to <em>wash</em> your blender before and after use.
       </p>
       <p>
+        All Images used were got from
+        <a href="https://unsplash.com/" target="_blank">Unsplash</a>
+      </p>
+      <p>
         Thank you for making it this far.
         <strong>Enjoy your smoothie!!!</strong>
       </p>
+    </section>
+    <section>
+      <h3>Nutritional Facts</h3>
+      <ul>
+        <li>
+          Greek yogurt can help provide part of your daily probiotics intake.
+        </li>
+        <li>
+          Pineapples are especially rich in antioxidants called flavonoids and
+          phenolic compounds. One study of ratsTrusted Source showed that
+          pineapple’s antioxidants may have heart-protective effects, though
+          human research is lacking.
+        </li>
+        <li>
+          Strawberries may improve heart health, lower blood sugar levels, and
+          help prevent cancer.
+        </li>
+      </ul>
+      <p>Sources:</p>
+      <a
+        href="https://www.healthline.com/nutrition/benefits-of-pineapple#contains-antioxidants"
+        >Pineapple Facts</a
+      >
+      <a
+        href="https://www.nutritionadvance.com/greek-yogurt-nutrition-benefits/"
+        >Yoghurt Facts</a
+      >
+      <a
+        href="https://www.healthline.com/nutrition/foods/strawberries#plant-compounds"
+        >Strawberries Facts</a
+      >
     </section>
   </body>
 </html>
